--- a/src/tsconfig.src.json
+++ b/src/tsconfig.src.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outFile": "../out/extension-bundle.js",
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": false,
   },
   "include": [
