--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2019",
     "module": "system",
+    "moduleResolution": "node",
     "lib": [
       "ES2019"
     ],
