--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "test": "node ./out/test/index.js"
   },
   "devDependencies": {
-    "@types/mocha": "7.0.2",
     "@types/node": "^12",
     "@types/vscode": "1.45.1",
     "@types/winston": "2.4.4",
@@ -54,6 +53,7 @@
     "mock-require": "3.0.3",
     "rimraf": "3.0.2",
     "typescript": "3.9.3",
+    "ts-mockito": "2.5.0",
     "mocha": "7.1.2",
     "source-map-support": "0.5.19",
     "vscode-test": "1.3.0"
