--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2019",
-    "module": "system",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "lib": [
       "ES2019"
@@ -16,7 +16,7 @@
       "infrastructure.*": [
         "infrastructure.*/index",
       ],
-      "infrastructure.providers/*": [
+      "infrastructure.providers.*": [
         "infrastructure.providers/*/index"
       ],
       "presentation.*": [
@@ -28,7 +28,7 @@
       "test.infrastructure.*": [
         "infrastructure.*/index.test",
       ],
-      "test.infrastructure.providers/*": [
+      "test.infrastructure.providers.*": [
         "infrastructure.providers/*/index.test",
       ],
       "test.providers.*": [
