--- a/src/tsconfig.src.json
+++ b/src/tsconfig.src.json
@@ -1,15 +1,12 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outFile": "../out/extension-bundle.js",
+    "outDir": "../out/",
     "noUnusedLocals": true,
     "noUnusedParameters": false,
   },
   "include": [
-    "infrastructure.providers/**/index.ts"
-  ],
-  "files": [
-    "activate.ts",
+    "infrastructure.providers/**/index.ts",
     "root.ts"
   ]
 }
