clean-arch-pt3: moved promiseSpawn and request-light to ctor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2019",
     "module": "CommonJS",
     "moduleResolution": "node",
+    "outDir": "../out/",
     "lib": [
       "ES2019"
     ],
