clean-arch-pt3: cleaned up container file naming

--- a/src/tsconfig.src.json
+++ b/src/tsconfig.src.json
@@ -6,7 +6,6 @@
     "noUnusedParameters": false,
   },
   "include": [
-    "infrastructure.providers/**/index.ts",
-    "root.ts"
+    "infrastructure.providers/**/index.ts"
   ]
 }
